# CraftOS

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  index.html  package-lock.json  package.json  vitest.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: error.rs  mod.rs
src-tauri/src/services/: file_service.rs  mod.rs  scan_service.rs  system_service.rs
src-tauri/tests/: scan_test.rs
src/components/charts/: CpuChart.tsx  DiskUsageChart.tsx  RamChart.tsx  Treemap.tsx  chartConfig.ts
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/ui/: AnimatedCard.tsx  Button.tsx  DataTable.tsx  MetricCard.tsx  PageHeader.tsx  PageTransition.tsx  ProgressBar.tsx  Skeleton.tsx  Toast.tsx
src/hooks/: useInterval.ts  useKeyboardShortcuts.ts  useSystemMetrics.ts  useTheme.ts
src/pages/: Dashboard.tsx  DiskAnalysis.tsx  Help.tsx  History.tsx  LargestFiles.tsx  ResourceMonitor.tsx  Settings.tsx  SmartCleanup.tsx  TreemapView.tsx
src/services/: tauri-commands.ts
src/stores/: diskStore.ts  historyStore.test.ts  historyStore.ts  settingsStore.ts  systemStore.test.ts  systemStore.ts
src/test/: setup.ts
src/types/: index.ts
src/utils/: format.test.ts  format.ts
